--- a/app/views/layouts/_mmm.html.erb
+++ b/app/views/layouts/_mmm.html.erb
@@ -1,8 +1,13 @@
+<div id="container">
+   <div id="header"></div>
+   <div id="body"></div>
+   <div id="footer"></div>
+</div>
 <footer id="footer">
 <div class="container">
   <div class="row">    
     <div class="col-xs-6 col-sm-6 col-md-3 column">          
-      	<h4>Information</h4>
+        <h4>Information</h4>
         <ul class="nav">
           <li><a href="about-us.html">About Us</a></li>
           <li><a href="about-us.html">Delivery Information</a></li>
@@ -11,7 +16,7 @@
         </ul> 
       </div>
     <div class="col-xs-6 col-md-3 column">          
-      	<h4>Follow Us</h4>
+        <h4>Follow Us</h4>
         <ul class="nav">
           
            <li><a href="#">Twitter</a></li>
@@ -21,7 +26,7 @@
         </ul> 
       </div>
     <div class="col-xs-6 col-md-3 column">          
-      	<h4>Contact Us</h4>
+        <h4>Contact Us</h4>
         <ul class="nav">
           <li><a href="#">Email</a></li>
           <li><a href="#">Headquarters</a></li>
@@ -30,7 +35,7 @@
         </ul> 
       </div>
     <div class="col-xs-6 col-md-3 column">          
-      	<h4>Customer Service</h4>
+        <h4>Customer Service</h4>
         <ul class="nav">
           <li><a href="#">About Us</a></li>
           <li><a href="#">Delivery Information</a></li>
@@ -43,4 +48,3 @@
   </div>
 </div>
 </footer>
-
