--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,22 +1,31 @@
-<div class="container-full">
-
-      <div class="row">
-       
-        <div class="col-lg-12 text-center v-center">
-          
-          <h1>Sign up</h1>
-          <p class="lead">-_-</p>
-          
-          <br><br><br>
-          
-          <form class="col-lg-12">
-            <div class="input-group" style="width:340px;text-align:center;margin:0 auto;">
-            <input class="form-control input-lg" title="Don't worry. We hate spam, and will not share your email with anyone." placeholder="Enter your email address" type="text">
-              <span class="input-group-btn"><button class="btn btn-lg btn-primary" type="button">OK</button></span>
-            </div>
-          </form>
+<!-- GOOGLE FONTS -->
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+<div class="navbar" id="navigation" role="navigation" style="background-color:#fff; border-bottom:1px solid #e3e3e3;">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/welcome"><img src="http://i.kinja-img.com/gawker-media/image/upload/y6k2hs8svqdlp9vvewxt.jpg" height="320px"></a>
         </div>
         
-      </div> <!-- /row -->
-
-</div> <!-- /container full -->
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="fotu">
+<div class="container">
+      <div class="row" style="margin-bottom:50px;">
+        <div class="col-md-5 col-md-offset-7">
+            <form action="r" method="post" accept-charset="utf-8" class="form" role="form">
+                <legend style="font-family:"helvetica",sans serif;">Sign Up</legend>
+                <h4></h4>
+                <input style="border-radius:2px;" type="text" name="email" value="" class="form-control input-lg" placeholder="Your Email"  />
+                <input style="border-radius:2px;" type="password" name="password" value="" class="form-control input-lg" placeholder="Password"  />
+                <input style="border-radius:2px;" type="password" name="confirm_password" value="" class="form-control input-lg" placeholder="Confirm Password"  />
+                <span class="help-block">By clicking "Sign up", you agree to our Terms of Service.</span>
+                <button style="border-radius:2px;" class="btn btn-lg btn-primary btn-block signup-btn" type="submit">Sign up</button>
+            </form>          
+          </div>
+</div>  
+</div>
+</div>
+</div>
